11.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    labels:                                          
    id: ds-important                               
    uuid: 18426a0b-5f59-4e10-923f-c0e078e82462     
  name: dstesting
  namespace: default
spec:
  selector:
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
          requests:                              
            cpu: 10m                               
            memory: 10Mi                           
      tolerations:                                 
      - effect: NoSchedule                         
        key: node-role.kubernetes.io/control-plane
