deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
      - name: nginx01
        image: nginx:1.14.2
        volumeMounts:
         - mountPath: /tmp
           name: cachetest
      volumes:
        - name: cachetest
          emptyDir: {}
