gateway.yml
apiVersion: gateway.networking.k8s.io/v2
kind: Gateway
metadata:
  name: web-gateway
  namespace: default
spec:
  gatewayClassName: nginx-class
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  hostname: "gateway.web.k8s.local"
  tls:
    mode: Terminate
    certificateRefs: 
      - name: web-tls
        kind: secret
